Blog Widget: Fix Column Sizing
It was previously a tad too large, and margin was still used to space columns. Space is handled by flex rather than margin.

--- a/widgets/blog/css/style.less
+++ b/widgets/blog/css/style.less
@@ -1,6 +1,3 @@
-.so-widget-sow-blog {
-}
-
 .sow-blog {
 	&.sow-blog-layout-grid .sow-blog-posts,
 	&.sow-blog-layout-masonry .sow-blog-posts,
@@ -12,6 +9,7 @@
 	}
 
 	article {
+		padding: 0;
 		margin: 0 0 30px;
 		.sow-entry-header {
 			margin-bottom: 25px;
@@ -78,22 +76,6 @@
 			.sow-entry-content {
 				font-size: 15px;
 			}
-		}
-	}
-
-
-	&.sow-blog-layout-grid article {
-		padding: 0;
-		margin: 0 1.5% 30px;
-	}
-
-	&.sow-blog-layout-masonry {
-		margin: 0 -1.5%;
-
-		article {
-			padding: 0;
-			padding: 0;
-			margin: 0 1.5% 30px;
 		}
 	}
 
