--- a/widgets/blog/styles/masonry.less
+++ b/widgets/blog/styles/masonry.less
@@ -5,9 +5,6 @@
 .sow-blog-layout-masonry article {
 	background: #fff;
 	border: 1px solid #e6e6e6;
-	padding: 0;
-	padding: 0;
-	margin: 0 1.5% 30px;
 	width: @column_width;
 
 	@media (max-width: @responsive_breakpoint) {
